# hotel-booking-backend

./: Cargo.toml  README.md  docker-compose.yml
http/: add_hotel.http  add_room_type.http  get_hotels.http
src/: appsettings.json  main.rs
src/domain/: hotel.rs  mod.rs  room_type.rs
src/domain/common/: errors.rs
src/endpoints/: mod.rs
src/endpoints/authentication/: callback.rs  login.rs  mod.rs
src/endpoints/hotels/: add_hotel.rs  get_hotels.rs  mod.rs
src/endpoints/room_types/: add_room_type.rs  mod.rs
src/middlewares/: mod.rs  session_middleware.rs
src/persistence/migrations/: 20260522214234_InitialCreate.sql  20260524084252_CreateRoomTypes.sql
src/persistence/repositories/: hotel_repository.rs  mod.rs  room_type_repository.rs
src/providers/: auth_provider.rs  config_provider.rs  mod.rs  pg_provider.rs
src/providers/common/: errors.rs
