[package]
name = "hotel-booking-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
chrono = "0.4.44"
config = "0.15.23"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "time"] }
time = { version = "0.3.47", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.20.0"
